# Beezy-Vortex-Studio-

./: README.md
.idx/: dev.nix
BeezyVortexStudio/: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle
BeezyVortexStudio/app/: build.gradle  build.gradle.kts
BeezyVortexStudio/app/src/main/: AndroidManifest.xml
BeezyVortexStudio/app/src/main/cpp/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.h  native-lib.cpp
BeezyVortexStudio/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
BeezyVortexStudio/app/src/main/res/mipmap-xhdpi/: ic_launcher.xml  ic_launcher_round.xml
BeezyVortexStudio/app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
BeezyVortexStudio/app/src/main/res/values/: styles.xml
VortexStudio/: settings.gradle  settings.gradle.kts
VortexStudio/app/: build.gradle
VortexStudio/app/src/main/: AndroidManifest.xml
VortexStudio/app/src/main/cpp/: CMakeLists.txt  VulkanRenderer.h  native-lib.cpp
VortexStudio/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
VortexStudio/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
VortexStudio/app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
VortexStudio/app/src/main/res/mipmap-mdpi/: ic_launcher.xml  ic_launcher_round.xml
VortexStudio/app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml  ic_launcher_round.xml
VortexStudio/app/src/main/res/mipmap-xxxhdpi/: ic_launcher.xml
VortexStudio/app/src/main/res/values/: strings.xml  themes.xml
VortexStudio/app/src/main/res/xml/: data_extraction_rules.xml
(+11 files in other folders)
